Migrated to JDK 22.